--- a/frontend_templates/info/account.html
+++ b/frontend_templates/info/account.html
@@ -33,8 +33,8 @@
       <p class="action-link"><a href="/users/enroll">Change Membership Status</a></p>
       {% else %}
       {% endif %}
-      <p class="action-link"><a href="/users/password_reset">Forgot password?</a></p>
-      <button class="btn btn-lg btn-primary btn-block form-block" type="submit">Update Account</button>
+      <a href="/users/password_reset" class="action-link">Forgot password?</a>
+      <button class="btn btn-lg btn-primary btn-block form-block top-padded" type="submit">Update Account</button>
     </form>
 </div>
 </center>
