--- a/frontend_templates/interview_q_instance/browse.html
+++ b/frontend_templates/interview_q_instance/browse.html
@@ -10,78 +10,67 @@
         <div class="col-sm-12">
              {% if user.is_authenticated %}
                 <div class="row">
-                    <h1 class="page-title">Interview Questions Unanswered:</h1>
+                    <h1 class="page-title">Answer Interview Questions</h1><br />
+                    <p class="page-description">On this page, you have the opportunity to interact with interview questions sent to you.
+                        You can preview certain questions before they are available to you. This will allow you to look at the question, API description, and
+                        example code.
+                    </p>
                 </div>
-                <div class="container">
+                <div class="row">
                     <!-- Preview -->
-                    <div class="question-section">
-                        <div class="row">
-                            <h2 class="question-row-title">Preview Questions:</h2>
-                        </div>
+                    <div class="question-section col-md-4">
+                        <h2 class="question-row-title">Preview Questions</h2>
                         <hr />
-                        <div class="row">
-                            {% for question in preview_questions %}
-                                <div class="col-md-4">
-                                    <div class="card mb-4 box-shadow">
-                                    <div class="card-body question-card">
-                                        <center>
-                                        <p class="card-text question-card-title">{{ question.base_question.name }}</p>
-                                        <p>Start Time: {{ question.start_time_date_str }}</p>
-                                        <div class="d-flex justify-content-between align-items-center">
-                                            <a href="/questions/answer/{{question.id}}" class="btn btn-outline-primary answer-btn">Answer</a>
-                                        </div>
-                                        </center>
-                                    </div>
-                                    </div>
+                        {% for question in preview_questions %}
+                            <div class="card mb-4 box-shadow">
+                            <div class="card-body question-card">
+                                <center>
+                                <p class="card-text question-card-title">{{ question.base_question.name }}</p>
+                                <p>Start Time: {{ question.start_time_date_str }}</p>
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <a href="/questions/answer/{{question.id}}" class="btn btn-outline-primary answer-btn">Preview</a>
                                 </div>
-                            {% endfor %}
-                        </div>
+                                </center>
+                            </div>
+                            </div>
+                        {% endfor %}
                     </div>
                     <!-- Available -->
-                    <div class="question-section">
-                            <div class="row">
-                                <h2 class="question-row-title">Answer Questions:</h2>
-                            </div>
+                    <div class="question-section col-md-4">
+                            <h2 class="question-row-title">Answer Questions</h2>
                             <hr />
-                            <div class="row">
-                                {% for question in available_questions %}
-                                    <div class="col-md-4">
-                                        <div class="card mb-4 box-shadow">
-                                        <div class="card-body question-card">
-                                            <center>
-                                            <p class="card-text question-card-title">{{ question.base_question.name }}</p>
-                                            <p>Start Time: {{ question.start_time_date_str }}</p>
-                                            <div class="d-flex justify-content-between align-items-center">
-                                                <a href="/questions/answer/{{question.id}}" class="btn btn-outline-primary answer-btn">Answer</a>
-                                            </div>
-                                            </center>
-                                        </div>
-                                        </div>
+                            {% for question in available_questions %}
+                                <div class="card mb-4 box-shadow">
+                                <div class="card-body question-card">
+                                    <center>
+                                    <p class="card-text question-card-title">{{ question.base_question.name }}</p>
+                                    <p>Start Time: {{ question.start_time_date_str }}</p>
+                                    <div class="d-flex justify-content-between align-items-center">
+                                        <a href="/questions/answer/{{question.id}}" class="btn btn-outline-primary answer-btn">Answer</a>
                                     </div>
-                                {% endfor %}
-                            </div>
-                    </div>
-                    <!-- Completed -->
-                    <div class="question-section">
-                        <div class="row">
-                            <h2 class="question-row-title">Completed Questions:</h2>
-                        </div>
-                        <hr />
-                        <div class="row">
-                            {% for question in completed_questions %}
-                                <div class="col-md-4">
-                                    <div class="card mb-4 box-shadow">
-                                    <div class="card-body question-card">
-                                        <center>
-                                        <p class="card-text question-card-title">{{ question.base_question.name }}</p>
-                                        </center>
-                                    </div>
-                                    </div>
+                                    </center>
+                                </div>
                                 </div>
                             {% endfor %}
-                        </div>
                     </div>
-                    <div class="row">
+                    <!-- Completed -->
+                    <div class="question-section col-md-4">
+                        <h2 class="question-row-title">Completed Questions</h2>
+                        <hr />
+                        {% for question in completed_questions %}
+                            <div class="card mb-4 box-shadow">
+                            <div class="card-body question-card">
+                                <center>
+                                <p class="card-text question-card-title">{{ question.base_question.name }}</p>
+                                </center>
+                            </div>
+                            </div>
+                        {% endfor %}
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12 centered">
+                     <p class="browse-text">Want to practice?</p>
                      <a href="/interview_questions/open" class="btn btn-primary btn-lg open-q-btn">Browse Open Questions</a>
                     </div>
                 </div>
