--- a/frontend_templates/interview_q/create.html
+++ b/frontend_templates/interview_q/create.html
@@ -50,13 +50,13 @@
                             <div class="form-check">
                                 <input class="form-check-input checkbox-style" type="checkbox" id="network_enabled" name="network_enabled">
                                 <label class="form-check-label checkbox-label" for="network_enabled">
-                                        Enable Network For This Question? <br /> We normally disable network access to best protect your supporting code.                               </label>
+                                    Enable Network For This Question? <br /> <p class="checkbox-label-description">We normally disable network access to best protect your supporting code.</p>                               </label>
                             </div>
                             <br/>
                             <div class="form-check">
                                 <input class="form-check-input checkbox-style" type="checkbox" id="allow_stdout" name="allow_stdout">
                                 <label class="form-check-label checkbox-label" for="allow_stdout">
-                                        Enable The User To Print During User Tests<br /> We normally disable this so they cannot try and inspect your library and supporting code.                              </label>
+                                        Enable The User To Print During User Tests<br /> <p class="checkbox-label-description"></p>We normally disable this so they cannot try and inspect your library and supporting code.   </p>                           </label>
                             </div>
                             <br/>
                         </div>
