--- a/frontend_templates/interview_q/question.html
+++ b/frontend_templates/interview_q/question.html
@@ -51,12 +51,12 @@
                                 <div class="form-check">
                                     <input class="form-check-input checkbox-style" type="checkbox" id="network_enabled" name="network_enabled" {% if question.network_enabled %}checked{% endif %}>
                                     <label class="form-check-label checkbox-label" for="network_enabled">
-                                            Enable Network For This Question? <br /> We normally disable network access to best protect your supporting code.                               </label>
+                                            Enable Network For This Question? <br /> <p class="checkbox-label-description">We normally disable network access to best protect your supporting code.</p>                               </label>
                                 </div><br />
                                 <div class="form-check">
                                     <input class="form-check-input checkbox-style" type="checkbox" id="allow_stdout" name="allow_stdout" {% if question.allow_stdout %}checked{% endif %}> 
                                     <label class="form-check-label checkbox-label" for="allow_stdout">
-                                            Enable The User To Print During User Tests<br /> We normally disable this so they cannot try and inspect your library and supporting code.                              </label>
+                                            Enable The User To Print During User Tests<br /> <p class="checkbox-label-description">We normally disable this so they cannot try and inspect your library and supporting code.      </p>                        </label>
                                 </div>
                                 <br/>
                             </div>
@@ -77,7 +77,10 @@
                         </div>
                         <div class="col-md-6">
                             <label class="centered code-label">Upload a requirements.txt file (Visible to users)</label> <br />
-                            <p class="centered code-label">NOTE: This must be re-uploaded if editing the question</p>
+                            <div class="alert alert-warning" role="alert">
+                                This must be re-uploaded if editing the question
+                              </div>
+
                             <input class="centered" type="file" id="requirements_file" name="requirements_file" accept=".txt">
 
                             <label class="centered code-label">Specify Which Imports Are Not Allowed (Visible to users) <br />
