--- a/frontend_templates/no_auth.html
+++ b/frontend_templates/no_auth.html
@@ -1,6 +1,6 @@
 <div style="color: white; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%);">
 <h1 style="font-size: 3em;">You are not logged in or do not have the appropriate permissions to access this page.</h1><br />
-<center><a style="color: white; font-size: 1.7em" href="/login">Log in here</a></center>
+<center><a style="color: white; font-size: 1.7em" href="/users/login">Log in here</a></center>
 </div>
 <script>
 function changeBackground(color) {
