UI updates to make it more intuitive

--- a/frontend_templates/info/home.html
+++ b/frontend_templates/info/home.html
@@ -12,7 +12,7 @@
     <div class="col-lg-12 mb-12 landing-section">
       <div class="landing-text">
         <h1 class="landing-title">Join the Interview Question Revolution</h1>
-        <p class="landing-description">Encompass Interviews allows people to leverage existing code and make new code to offer users unique programming challenges similar to challenges they would encounter in the real world.
+        <p class="landing-description">Encompass Interviews provides interviewers with tools to evaluate potential hires based on real world and unique programming challenges.
         </p>
         {% if user.is_authenticated %}
           {% if user.is_from_company %}
