--- a/frontend_templates/registration/login.html
+++ b/frontend_templates/registration/login.html
@@ -30,7 +30,8 @@
       <br />
       <a class="forgot-password" href="/users/password_reset">Forgot password?</a>
       <br /><br />
-      <button class="btn btn-lg btn-primary btn-block form-block" type="submit">Sign In</button>
+      <button class="btn btn-lg btn-primary btn-block form-block" type="submit">Sign In</button><br />
+      <p>Don't have an account? <a class="alt" href="/users/signup">Create one</a></p>
     </form>
 </div>
 </center>
