--- a/frontend_templates/registration/signup.html
+++ b/frontend_templates/registration/signup.html
@@ -22,6 +22,7 @@
       {% csrf_token %}
       <img class="d-block mx-auto mb-4" src="{% static 'images/icon.png' %}" alt="" width="72" height="72">
       <h1 class="h3 mb-3 font-weight-normal">SIGN UP</h1>
+      <p>Already have an account? <a class="alt" href="/users/login">Login here</a></p>
       <label for="email" class="sr-only">Email address</label>
       <input type="email" id="email" name="email" class="form-control" placeholder="Email address" required autofocus><br />
       <input type="text" id="first_name" name="first_name" class="form-control" placeholder="First Name" required maxlength="32"><br />
