--- a/frontend_templates/base.html
+++ b/frontend_templates/base.html
@@ -21,11 +21,11 @@
 </head>
 <body>
   <!-- Navigation -->
-  <nav class="navbar fixed-top navbar-expand-lg navbar-dark fixed-top" style="background: #c4c0ff; max-height: 5vh;">
+  <nav class="navbar fixed-top navbar-expand-lg navbar-dark fixed-top" style="background: #F8F8F8; max-height: 5vh;">
       <div class="container-fluid">
         <a class="navbar-brand" href="/" style="color: #6c5ce7; font-weight: bold;"><img src="{% static 'images/icon.png' %}" width="24" height="24" style="margin-right: .3vw; margin-bottom: .5vh;">Encompass Interviews</a>
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+        <button class="navbar-toggle navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon icon-bar"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto" style="margin-left: 20vw">
