make create and edit flow more clear

--- a/frontend_templates/info/home.html
+++ b/frontend_templates/info/home.html
@@ -25,6 +25,7 @@
         {% endif %}
       </div>
     </div>
+    {% if questions|length > 1 %}
     <div class="open-questions">
       <h1 class="open-questions-title">Explore Example Questions</h1>
       <!-- Marketing Icons Section -->
@@ -45,6 +46,7 @@
         </div>
       <!-- /.row -->
     </div>
+    {% endif %}
     <div class="row appeal-section" style="margin-bottom: 3vh">
       <h3 class="col-md-12 about-section-header-title">Let's Offer Another Way</h3>
       <div class="col-lg-6 mb-6 left-section">
