--- a/frontend_templates/interview_q/create.html
+++ b/frontend_templates/interview_q/create.html
@@ -3,6 +3,7 @@
 {% load compress %}
 {% block css_imports %}
 <link href="{% static 'interview/creation/main.css' %}" rel="stylesheet">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.9/dist/css/bootstrap-select.min.css">
 {% endblock %}
 
 {% block content %}
@@ -77,8 +78,14 @@
                             <h2 class="step-title">Step 2: Write Your Supporting Code</h2><br />
                     </div>
                     <div class="col-md-6">
-                        <label class="centered code-label">Upload a requirements.txt file (Visible to users)</label> <br />
-                        <input class="centered" type="file" id="requirements_file" name="requirements_file" accept=".txt"> <br />
+                    <label class="centered code-label">Select Additional Imports For Your Project (Visible to users) <br />
+                        <p class="field_description">Don't see something you need? <a href="mailto: support@encompassinterviews.com">Contact Us</a></p></label><br />
+                        <select class="selectpicker form-control" id="dependencies" name="dependencies" multiple>
+                            {% for module in available_modules %}
+                                <option>{{ module }}</option>
+                            {% endfor %}
+                        </select>      
+                        <br />   
 
                         <label class="centered code-label">Specify Which Imports Are Not Allowed (Visible to users) <br />
                         <p class="field_description">List the names of the modules, separated by commas.
@@ -276,6 +283,7 @@
         </div>
 </div>
 <script src="https://pagecdn.io/lib/ace/1.4.5/ace.js" integrity="sha256-5Xkhn3k/1rbXB+Q/DX/2RuAtaB4dRRyQvMs83prFjpM=" crossorigin="anonymous"></script>    
+<script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.9/dist/js/bootstrap-select.min.js"></script>
 {% compress js inline %}
 <script>
     function textarea_edit(name) {
