--- a/frontend_templates/interview_q/question.html
+++ b/frontend_templates/interview_q/question.html
@@ -4,6 +4,7 @@
 {% load index %}
 {% block css_imports %}
 <link href="{% static 'interview/creation/main.css' %}" rel="stylesheet">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.9/dist/css/bootstrap-select.min.css">
 {% endblock %}
 
 {% block content %}
@@ -45,7 +46,7 @@
     
                                 <label for="question_language">Question Language (Visible to users) </label>
                                 <select class="form-control" id="question_language" name="question_language">
-                                    <option {% if question.language == 'Python3' %}selected{% endif %}>Python3</option>
+                                    <option {% if question.language == 'Python3.6' %}selected{% endif %}>Python3.6</option>
                                 </select> <br/>
 
                                 <div class="form-check">
@@ -79,14 +80,14 @@
                                 <h2 class="step-title">Step 2: Write Your Supporting Code</h2><br />
                         </div>
                         <div class="col-md-6">
-                            <label class="centered code-label">Upload a requirements.txt file (Visible to users)</label> <br />
-                            {% if is_requirements_file %}
-                                <div class="alert alert-info" role="alert">
-                                    We will use your old requirements.txt file if no one new one is uploaded
-                                </div>
-                            {% endif %}
-
-                            <input class="centered" type="file" id="requirements_file" name="requirements_file" accept=".txt">
+                            <label class="centered code-label">Select Additional Imports For Your Project (Visible to users) <br />
+                            <p class="field_description">Don't see something you need? <a href="mailto: support@encompassinterviews.com">Contact Us</a></p></label><br />
+                            <select class="selectpicker form-control" id="dependencies" name="dependencies" multiple>
+                                {% for module in available_modules %}
+                                    <option>{{ module }}</option>
+                                {% endfor %}
+                            </select>      
+                            <br />                            
 
                             <label class="centered code-label">Specify Which Imports Are Not Allowed (Visible to users) <br />
                                 <p class="field_description">List the names of the modules, separated by commas.
@@ -292,12 +293,13 @@
             </div>
     </div>
     <script src="https://pagecdn.io/lib/ace/1.4.5/ace.js" integrity="sha256-5Xkhn3k/1rbXB+Q/DX/2RuAtaB4dRRyQvMs83prFjpM=" crossorigin="anonymous"></script>    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.9/dist/js/bootstrap-select.min.js"></script>
     <script>
-	function textarea_edit(name){var editor=ace.edit(name);editor.setTheme("ace/theme/chrome");editor.session.setMode("ace/mode/python");var textarea=$('textarea[name="'+name+'"]').hide();textarea.val(editor.getSession().getValue());editor.getSession().on('change',function(){textarea.val(editor.getSession().getValue())})}
+function textarea_edit(name){var editor=ace.edit(name);editor.setTheme("ace/theme/chrome");editor.session.setMode("ace/mode/python");var textarea=$('textarea[name="'+name+'"]').hide();textarea.val(editor.getSession().getValue());editor.getSession().on('change',function(){textarea.val(editor.getSession().getValue())})}
 function switch_code(number,name){$("#"+name+"_file_"+number).hide();$("#"+name+"_switch_"+number).change(function(){if(this.checked){$("#"+name+"_body_name_"+number).hide();$("#"+name+"_body_"+number).hide();$("#"+name+"_file_"+number).show()}else{$("#"+name+"_body_"+number).show();$("#"+name+"_body_name_"+number).show();$("#"+name+"_file_"+number).hide()}})}
 function populate_array(array,string_name){for(var i=1;i<array.length+1;i++){textarea_edit(string_name+"_body_"+i.toString());switch_code(i.toString(),string_name)}}
 var code_names={{supporting_code_names|safe}};populate_array(code_names,"supporting");code_names={{starter_code_names|safe}};populate_array(code_names,"starter");code_names={{example_code_names|safe}};populate_array(code_names,"example");code_names={{solution_code_names|safe}};populate_array(code_names,"solution");textarea_edit("test_body_1");switch_code("1","test");
-$(document).on("keydown", ":input:not(textarea)", function(event) {return event.key != "Enter";});
+$(document).on("keydown", ":input:not(textarea)", function(event) {return event.key != "Enter";});var all_deps = "{{already_used_dep | safe}}"; var dep_array = all_deps.split(",");$("#dependencies").val(dep_array);$("#dependencies").multiselect("refresh");
     </script>
         
     {% compress js %}
