move css to base

--- a/frontend_templates/base.html
+++ b/frontend_templates/base.html
@@ -13,6 +13,7 @@
   <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
   {% compress css %}
     <link href="{% static 'main/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static 'main/vendor/bootstrap/css/bootstrap-select.min.css' %}" rel="stylesheet">
     <link href="{% static 'main/css/base.css' %}" rel="stylesheet">
     {% block css_imports %}
     {% endblock %}
