--- a/frontend_templates/registration/signup.html
+++ b/frontend_templates/registration/signup.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 <center>
-<div style="padding-top: 10vh; max-width: 30vw;">
+<div class="form-body">
     {% if error_messages %}
       <div class="alert alert-danger" role="alert">
           Error Signing Up: <br /><br />
