--- a/frontend_templates/interview_q_instance/answer.html
+++ b/frontend_templates/interview_q_instance/answer.html
@@ -5,8 +5,8 @@
 {% block css_imports %}
 <link href="{% static 'main/css/answer.css' %}" rel="stylesheet" type="text/css">
 {% endblock %}
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intro.js/2.9.3/introjs.min.css" integrity="sha256-/oZ7h/Jkj6AfibN/zTWrCoba0L+QhP9Tf/ZSgyZJCnY=" crossorigin="anonymous" />
 {% block content %}
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intro.js/2.9.3/introjs.min.css" integrity="sha256-/oZ7h/Jkj6AfibN/zTWrCoba0L+QhP9Tf/ZSgyZJCnY=" crossorigin="anonymous" />
 {% if user.is_authenticated %}
 <div class="main_container">
   <form method="post" action="{{ request.path }}" class="row" enctype="multipart/form-data" id="question_answer">
@@ -317,7 +317,7 @@ function textarea_edit_test_case(name) {
         document.getElementById('test_case_editor_textarea').value = editor.getSession().getValue()
         send_socket_file_content_update('', editor.getSession().getValue(), true, false);
     });
-    var test_case_body = "# this import is needed\nimport unittest\n# these import the required files\n";
+    var test_case_body = "# this import is needed\nimport unittest\n# You can also import the modules defined in the Allowed Imports section above. \n# these import the required files\n";
     var starter_code_names = {{ files_to_work_on_names | safe }};
     for (var i = 0; i < starter_code_names.length; i++) {
         var curr_name = starter_code_names[i].split(".")[0];
