--- a/frontend_templates/registration/login.html
+++ b/frontend_templates/registration/login.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 <center>
-<div style="padding-top: 10vh; max-width: 30vw;">
+<div class="form-body">
     {% if message|length > 0 %}
         {% if message_color == 'red' %}
           <div class="alert alert-warning" role="alert">
