--- a/frontend_templates/registration/password_reset_done.html
+++ b/frontend_templates/registration/password_reset_done.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 <center>
-<div style="padding-top: 10vh; max-width: 30vw;">
+<div class="form-body">
     <form class="form-signin" method="post">
         {% csrf_token %}
         <img class="d-block mx-auto mb-4" src="{% static 'images/icon.png' %}" alt="" width="72" height="72">
