--- a/frontend_templates/info/account.html
+++ b/frontend_templates/info/account.html
@@ -31,7 +31,7 @@
             <input type="text" id="account_status" name="account_status" class="form-control" value="{{ user.subscription.plan_type }}" readonly><br />
 
             <label for="account_status">Membership Expiration</label>
-            <input type="text" id="account_status" name="account_status" class="form-control" value="{{ user.subscription.terminated_on }}" readonly><br />
+            <input type="text" id="account_status" name="account_status" class="form-control" value="{{ terminated_time }}" readonly><br />
       </div>
       <a href="/users/enroll" class="action-link">Change or Renew Membership Status</a><br /><br/><br/>
       {% else %}
