--- a/frontend_templates/info/home.html
+++ b/frontend_templates/info/home.html
@@ -79,7 +79,7 @@
           <div class="col-lg-4 mb-4">
             <div class="offer-section-item">
               <h3 class="about-section-header">Code Base Security</h3>
-              <p class="about-section-text">We will make sure your code that supports the user submission is kept safe and away from any prying eyes.</p>
+              <p class="about-section-text">We give you the tools to make sure your code that supports the user submission is kept safe and away from any prying eyes.</p>
              </div>
           </div>
     </div>
