--- a/frontend_templates/info/home.html
+++ b/frontend_templates/info/home.html
@@ -67,7 +67,7 @@
           <div class="col-lg-4 mb-4">
             <div class="offer-section-item">
               <h3 class="about-section-header">Integrated Problems</h3>
-              <p class="about-section-text">We allow you to incorporate your existing code, declare APIs, create example code snippets and write tests to create programming challenges that cannot be created anywhere else online.</p>
+              <p class="about-section-text">We allow you to incorporate your existing code, declare APIs, create example code snippets, specify libraries, and write tests to create programming challenges that cannot be created anywhere else online.</p>
             </div>
           </div>
           <div class="col-lg-4 mb-4">
