--- a/frontend_templates/registration/acc_active_email.html
+++ b/frontend_templates/registration/acc_active_email.html
@@ -1,5 +1,5 @@
 {% autoescape off %}
-Hi {{ user.username }}, 
+Hi {{ user.first_name }}, 
 
 
 Please click on the link to confirm your registration:
