home page changes and increase failed login attempts to 5

--- a/frontend_templates/info/home.html
+++ b/frontend_templates/info/home.html
@@ -72,14 +72,14 @@
           </div>
           <div class="col-lg-4 mb-4">
               <div class="offer-section-item">
-                <h3 class="about-section-header">Total Control</h3>
+                <h3 class="about-section-header">Total Customization</h3>
                 <p class="about-section-text">Use whatever code you would like. Write all the test cases you need. We have you covered.</p>
               </div>
           </div>
           <div class="col-lg-4 mb-4">
             <div class="offer-section-item">
               <h3 class="about-section-header">Code Base Security</h3>
-              <p class="about-section-text">We give you the tools to make sure your code that supports the user submission is kept safe and away from any prying eyes.</p>
+              <p class="about-section-text">We give you the tools to make sure your code that supports the user submission is kept safe.</p>
              </div>
           </div>
     </div>
